finished third train model

--- a/task13.ipynb
+++ b/task13.ipynb
@@ -118,267 +118,120 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
+      "Goal Position: [0.21703888 0.04528046 0.18339357]\n",
       "Step 1:\n",
       "  Current Position: [0.0735 0.0889 0.1205]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 281.61 mm\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 162.67 mm\n",
       "Step 2:\n",
       "  Current Position: [0.0744 0.0878 0.1224]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 279.80 mm\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 160.85 mm\n",
       "Step 3:\n",
       "  Current Position: [0.0757 0.0862 0.1253]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 277.16 mm\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 158.20 mm\n",
       "Step 4:\n",
-      "  Current Position: [0.0776 0.0839 0.1291]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 273.45 mm\n",
+      "  Current Position: [0.0776 0.0839 0.1285]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 154.75 mm\n",
       "Step 5:\n",
-      "  Current Position: [0.0799 0.0811 0.1333]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 269.07 mm\n",
+      "  Current Position: [0.0799 0.0811 0.1315]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 150.94 mm\n",
       "Step 6:\n",
-      "  Current Position: [0.0826 0.0778 0.1405]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 263.58 mm\n",
+      "  Current Position: [0.0826 0.078  0.1391]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 145.28 mm\n",
       "Step 7:\n",
-      "  Current Position: [0.0858 0.0739 0.1464]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 257.67 mm\n",
+      "  Current Position: [0.0858 0.075  0.1454]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 139.82 mm\n",
       "Step 8:\n",
-      "  Current Position: [0.0895 0.0697 0.1511]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 251.49 mm\n",
+      "  Current Position: [0.0895 0.0721 0.1504]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 134.44 mm\n",
       "Step 9:\n",
-      "  Current Position: [0.0936 0.0656 0.1551]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 245.33 mm\n",
+      "  Current Position: [0.0936 0.0693 0.1542]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 129.10 mm\n",
       "Step 10:\n",
-      "  Current Position: [0.0978 0.0614 0.1591]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 239.07 mm\n",
+      "  Current Position: [0.0978 0.0667 0.1573]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 123.93 mm\n",
       "Step 11:\n",
-      "  Current Position: [0.1019 0.0572 0.1629]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 232.94 mm\n",
+      "  Current Position: [0.1019 0.0642 0.1597]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 119.06 mm\n",
       "Step 12:\n",
-      "  Current Position: [0.1061 0.0531 0.1667]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 226.88 mm\n",
+      "  Current Position: [0.1061 0.0619 0.1617]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 114.26 mm\n",
       "Step 13:\n",
-      "  Current Position: [0.1103 0.0489 0.1703]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 220.81 mm\n",
+      "  Current Position: [0.1103 0.0597 0.1634]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 109.55 mm\n",
       "Step 14:\n",
-      "  Current Position: [0.1144 0.0447 0.1739]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 214.85 mm\n",
+      "  Current Position: [0.1144 0.0577 0.1651]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 104.99 mm\n",
       "Step 15:\n",
-      "  Current Position: [0.1186 0.0406 0.1773]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 208.99 mm\n",
+      "  Current Position: [0.1186 0.0557 0.1668]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 100.37 mm\n",
       "Step 16:\n",
-      "  Current Position: [0.1228 0.0364 0.1806]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 203.09 mm\n",
+      "  Current Position: [0.1228 0.0539 0.1685]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 95.80 mm\n",
       "Step 17:\n",
-      "  Current Position: [0.1269 0.0322 0.1839]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 197.31 mm\n",
+      "  Current Position: [0.1269 0.0522 0.1701]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 91.38 mm\n",
       "Step 18:\n",
-      "  Current Position: [0.1311 0.0281 0.187 ]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 191.63 mm\n",
+      "  Current Position: [0.1311 0.0506 0.1717]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 86.89 mm\n",
       "Step 19:\n",
-      "  Current Position: [0.1351 0.0239 0.19  ]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 186.02 mm\n",
+      "  Current Position: [0.1353 0.0491 0.1734]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 82.44 mm\n",
       "Step 20:\n",
-      "  Current Position: [0.139  0.0197 0.193 ]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 180.52 mm\n",
+      "  Current Position: [0.1394 0.0476 0.175 ]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 78.13 mm\n",
       "Step 21:\n",
-      "  Current Position: [0.1427 0.0156 0.1958]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 175.26 mm\n",
+      "  Current Position: [0.1436 0.0463 0.1766]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 73.76 mm\n",
       "Step 22:\n",
-      "  Current Position: [0.1464 0.0114 0.1985]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 169.97 mm\n",
+      "  Current Position: [0.1478 0.0451 0.1782]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 69.43 mm\n",
       "Step 23:\n",
-      "  Current Position: [0.1499 0.0072 0.2012]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 164.85 mm\n",
+      "  Current Position: [0.1519 0.0439 0.1798]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 65.25 mm\n",
       "Step 24:\n",
-      "  Current Position: [0.1533 0.0031 0.2037]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 159.90 mm\n",
+      "  Current Position: [0.1558 0.0428 0.1814]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 61.32 mm\n",
       "Step 25:\n",
-      "  Current Position: [ 0.1565 -0.0011  0.2061]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 155.02 mm\n",
+      "  Current Position: [0.1594 0.0418 0.183 ]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 57.75 mm\n",
       "Step 26:\n",
-      "  Current Position: [ 0.1597 -0.0053  0.2084]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 150.18 mm\n",
+      "  Current Position: [0.1629 0.0408 0.1845]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 54.34 mm\n",
       "Step 27:\n",
-      "  Current Position: [ 0.1628 -0.0094  0.2106]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 145.53 mm\n",
+      "  Current Position: [0.1661 0.0399 0.1861]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 51.29 mm\n",
       "Step 28:\n",
-      "  Current Position: [ 0.1657 -0.0136  0.2128]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 140.95 mm\n",
-      "Step 29:\n",
-      "  Current Position: [ 0.1686 -0.0178  0.2148]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 136.40 mm\n",
-      "Step 30:\n",
-      "  Current Position: [ 0.1713 -0.0219  0.2167]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 132.08 mm\n",
-      "Step 31:\n",
-      "  Current Position: [ 0.174  -0.0261  0.2186]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 127.73 mm\n",
-      "Step 32:\n",
-      "  Current Position: [ 0.1765 -0.0303  0.2203]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 123.50 mm\n",
-      "Step 33:\n",
-      "  Current Position: [ 0.179  -0.0344  0.2219]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 119.40 mm\n",
-      "Step 34:\n",
-      "  Current Position: [ 0.1813 -0.0386  0.2235]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 115.37 mm\n",
-      "Step 35:\n",
-      "  Current Position: [ 0.1836 -0.0428  0.2249]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 111.35 mm\n",
-      "Step 36:\n",
-      "  Current Position: [ 0.1858 -0.0469  0.2263]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 107.54 mm\n",
-      "Step 37:\n",
-      "  Current Position: [ 0.1879 -0.0511  0.2275]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 103.70 mm\n",
-      "Step 38:\n",
-      "  Current Position: [ 0.1899 -0.0553  0.2287]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 99.98 mm\n",
-      "Step 39:\n",
-      "  Current Position: [ 0.1918 -0.0594  0.2297]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 96.39 mm\n",
-      "Step 40:\n",
-      "  Current Position: [ 0.1937 -0.0636  0.2307]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 92.80 mm\n",
-      "Step 41:\n",
-      "  Current Position: [ 0.1955 -0.0678  0.2316]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 89.32 mm\n",
-      "Step 42:\n",
-      "  Current Position: [ 0.1971 -0.0719  0.2324]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 86.04 mm\n",
-      "Step 43:\n",
-      "  Current Position: [ 0.1988 -0.076   0.2331]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 82.77 mm\n",
-      "Step 44:\n",
-      "  Current Position: [ 0.2003 -0.0799  0.2337]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 79.78 mm\n",
-      "Step 45:\n",
-      "  Current Position: [ 0.2018 -0.0836  0.2342]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 76.98 mm\n",
-      "Step 46:\n",
-      "  Current Position: [ 0.2032 -0.0872  0.2346]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 74.33 mm\n",
-      "Step 47:\n",
-      "  Current Position: [ 0.2045 -0.0907  0.235 ]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 71.88 mm\n",
-      "Step 48:\n",
-      "  Current Position: [ 0.2058 -0.0941  0.2353]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 69.54 mm\n",
-      "Step 49:\n",
-      "  Current Position: [ 0.207  -0.0974  0.2355]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 67.34 mm\n",
-      "Step 50:\n",
-      "  Current Position: [ 0.2081 -0.1005  0.2356]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 65.32 mm\n",
-      "Step 51:\n",
-      "  Current Position: [ 0.2092 -0.1035  0.2357]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 63.45 mm\n",
-      "Step 52:\n",
-      "  Current Position: [ 0.2103 -0.1065  0.2357]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 61.61 mm\n",
-      "Step 53:\n",
-      "  Current Position: [ 0.2113 -0.1093  0.2356]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 59.92 mm\n",
-      "Step 54:\n",
-      "  Current Position: [ 0.2122 -0.112   0.2355]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 58.40 mm\n",
-      "Step 55:\n",
-      "  Current Position: [ 0.2131 -0.1147  0.2353]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 56.90 mm\n",
-      "Step 56:\n",
-      "  Current Position: [ 0.2139 -0.1172  0.2351]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 55.60 mm\n",
-      "Step 57:\n",
-      "  Current Position: [ 0.2147 -0.1197  0.2348]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 54.31 mm\n",
-      "Step 58:\n",
-      "  Current Position: [ 0.2155 -0.122   0.2345]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 53.17 mm\n",
-      "Step 59:\n",
-      "  Current Position: [ 0.2162 -0.1243  0.2341]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 52.05 mm\n",
-      "Step 60:\n",
-      "  Current Position: [ 0.2169 -0.1265  0.2337]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 51.04 mm\n",
-      "Step 61:\n",
-      "  Current Position: [ 0.2175 -0.1287  0.2332]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 50.05 mm\n",
-      "Step 62:\n",
-      "  Current Position: [ 0.2181 -0.1307  0.2327]\n",
-      "  Goal Position: [ 0.23040123 -0.13578124  0.18536073]\n",
-      "  Distance to Goal: 49.17 mm\n",
+      "  Current Position: [0.1692 0.0391 0.1876]\n",
+      "  Goal Position: [0.21703888 0.04528046 0.18339357]\n",
+      "  Distance to Goal: 48.42 mm\n",
       "Environment Terminated!\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -394,7 +247,7 @@
     "model = PPO.load(model_path)  # Replace PPO with the correct algorithm\n",
     "\n",
     "# Initialize the environment\n",
-    "env = OT2Env(render=False)  # Initialize the environment with rendering disabled\n",
+    "env = OT2Env(render=True)  # Initialize the environment with rendering disabled\n",
     "\n",
     "# Test the trained model\n",
     "def test_model(env, model, max_steps=1000):\n",
